# machine_translation

./: pyproject.toml
machine_translation/: main.py  utils.py
tests/: test_machine_translation.py
