[tool.poetry]
name = "machine_translation"
version = "0.1.0"
description = ""
authors = ["guilhermerezende <guilherme.rezende@redacaonline.com.br>"]

[tool.poetry.dependencies]
python = "^3.9"
nltk = "^3.8"
numpy = "^1.23.5"
pandas = "^1.5.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
